--- a/join.html
+++ b/join.html
@@ -68,12 +68,19 @@
 <div class="main">
     <div class="header">
         <div class="header_left">
-            <img src="images/daztenLord.png">
+            <img src="images/daztenLord.png"  onclick="window.location.href='home.html'">
         </div>
         <div class="header_right">
-            <p>DOCS</p>
-            <p>JOIN US</p>
-            <p>EN</p>
+            <div class="div_hover">
+                <p onclick="window.location.href='docs.html'">DOCS</p>
+            </div>
+            <div class="div_hover">
+                <p onclick="window.location.href='join.html'">JOIN US</p>
+            </div>
+            <div>
+                <p>EN</p>
+                <img src="images/drop-down.png" style="width: 15px; height: 10px;margin-left: 10px;">
+            </div>
         </div>
     </div>
     <div class="content">
