--- a/home.html
+++ b/home.html
@@ -16,6 +16,11 @@
             justify-content: center;
             color: #000000;
             box-shadow: 0px 8px 20px 10px rgba(47, 81, 157, 0.2);
+            margin-right: 40px;
+        }
+
+        .content_body:last-child {
+            margin-right: 0 !important;
         }
 
         .content_img {
@@ -34,18 +39,30 @@
             font-size: 20px;
             padding: 0 20px;
         }
+
+        .content_body {
+            margin: 40px 0 100px 0 !important;
+            justify-content: center !important;
+        }
     </style>
 </head>
 <body>
 <div class="main">
     <div class="header">
         <div class="header_left">
-            <img src="images/daztenLord.png">
+            <img src="images/daztenLord.png"  onclick="window.location.href='home.html'">
         </div>
         <div class="header_right">
-            <p>DOCS</p>
-            <p>JOIN US</p>
-            <p>EN</p>
+            <div class="div_hover">
+                <p onclick="window.location.href='docs.html'">DOCS</p>
+            </div>
+            <div class="div_hover">
+                <p onclick="window.location.href='join.html'">JOIN US</p>
+            </div>
+            <div>
+                <p>EN</p>
+                <img src="images/drop-down.png" style="width: 15px; height: 10px;margin-left: 10px;">
+            </div>
         </div>
     </div>
     <div class="content">
