--- a/docs.html
+++ b/docs.html
@@ -351,7 +351,7 @@ kubectl apply -f datenlord-demo.yaml
                             </div>
                             <div>
                                 <img src="images/line2.png" style="    position: absolute;margin-top: 80px; margin-left: -228px;">
-                     on m   </div>
+                            </div>
                         </div>
                     </div>
                     <p class="para margin60">It may need to install snapshot CRD and controller on K8S,</p>
