整体布局优化，适配小分辨率

--- a/join.html
+++ b/join.html
@@ -66,20 +66,22 @@
 </head>
 <body>
 <div class="main">
-    <div class="header">
-        <div class="header_left">
-            <img src="images/daztenLord.png"  onclick="window.location.href='home.html'">
-        </div>
-        <div class="header_right">
-            <div class="div_hover">
-                <p onclick="window.location.href='docs.html'">DOCS</p>
+    <div class="header_box">
+        <div class="header">
+            <div class="header_left">
+                <img src="images/daztenLord.png"  onclick="window.location.href='home.html'">
             </div>
-            <div class="div_hover">
-                <p onclick="window.location.href='join.html'">JOIN US</p>
-            </div>
-            <div>
-                <p>EN</p>
-                <img src="images/drop-down.png" style="width: 15px; height: 10px;margin-left: 10px;">
+            <div class="header_right">
+                <div class="div_hover">
+                    <p onclick="window.location.href='docs.html'">DOCS</p>
+                </div>
+                <div class="div_hover">
+                    <p onclick="window.location.href='join.html'">JOIN US</p>
+                </div>
+                <div>
+                    <p>EN</p>
+                    <img src="images/drop-down.png" style="width: 15px; height: 10px;margin-left: 10px;">
+                </div>
             </div>
         </div>
     </div>
@@ -171,16 +173,18 @@
             </div>
         </div>
     </div>
-    <div class="footer">
-        <div class="footer_img">
-            <img src="images/logo_Dark.png">
-        </div>
-        <div class="footer_icon">
-            <img src="images/icon1.png">
-            <img src="images/icon2.png">
-            <img src="images/icon3.png">
-            <img src="images/icon4.png">
-            <img src="images/icon5.png">
+    <div class="footer_box">
+        <div class="footer">
+            <div class="footer_img">
+                <img src="images/logo_Dark.png">
+            </div>
+            <div class="footer_icon">
+                <img src="images/icon1.png">
+                <img src="images/icon2.png">
+                <img src="images/icon3.png">
+                <img src="images/icon4.png">
+                <img src="images/icon5.png">
+            </div>
         </div>
     </div>
 </div>
