--- a/home.html
+++ b/home.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link type="text/css" rel="styleSheet"  href="./css/index.css" />
+    <link type="text/css" rel="styleSheet"  href="./css/main.css" />
     <style>
         .content_box {
             width: 270px;
@@ -51,7 +52,8 @@
     <div class="header_box">
         <div class="header">
             <div class="header_left">
-                <img src="images/daztenLord.png"  onclick="window.location.href='home.html'">
+                <img src="images/daztenLord.png"  onclick="window.location.href='home.html'" class="datenLord">
+                <img src="images/datenLord_logo.png"  onclick="window.location.href='home.html'" class="datenLord_logo">
             </div>
             <div class="header_right">
                 <div class="div_hover">
@@ -62,7 +64,7 @@
                 </div>
                 <div>
                     <p>EN</p>
-                    <img src="images/drop-down.png" style="width: 15px; height: 10px;margin-left: 10px;">
+                    <img src="images/drop-down.png" class="header_arrow">
                 </div>
             </div>
         </div>
