--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DatenLord</title>
     <link type="text/css" rel="styleSheet"  href="./css/index.css" />
     <link type="text/css" rel="styleSheet"  href="./css/main.css" />
     <style>
