修复IE11不支持code

--- a/docs.html
+++ b/docs.html
@@ -9,7 +9,7 @@
     <link type="text/css" rel="styleSheet"  href="./css/reset.css" />
     <link type="text/css" rel="styleSheet"  href="./css/main.css" />
     <link rel="stylesheet" href="./css/vs2015.min.css">
-    <script src="./js/highlight.min.js"></script>
+    <script src="./js/highlight.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
     <style>
         .content {
@@ -170,6 +170,7 @@
             line-height: 32px;
             font-family: "微软雅黑", Tahoma, Helvetica, Arial, sans-serif;
             border-radius: 8px;
+            color: #34CE58;
         }
 
         .hljs-meta .hljs-string, .hljs-string, .hljs-attr, .hljs-attribute, .hljs-meta, .hljs-bullet {
