修正字体图标

--- a/home.html
+++ b/home.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DatenLord</title>
     <link type="text/css" rel="styleSheet"  href="./css/index.css" />
+    <link type="text/css" rel="styleSheet"  href="./css/reset.css" />
     <link type="text/css" rel="styleSheet"  href="./css/main.css" />
     <style>
         .content_box {
@@ -14,10 +15,11 @@
             background-color: #FFFFFF;
             display: flex;
             flex-direction: column;
-            justify-content: center;
+            justify-content: space-between;
             color: #000000;
-            box-shadow: 0px 8px 20px 10px rgba(47, 81, 157, 0.2);
+            box-shadow: 0px 8px 20px 10px rgb(47 81 157 / 20%);
             margin-right: 40px;
+            border-radius: 8px;
         }
 
         .content_body:last-child {
@@ -25,25 +27,43 @@
         }
 
         .content_img {
+            margin-top: 30px;
             display: flex;
             justify-content: center;
         }
 
         .content_box_title {
             margin-top: 65px;
+            margin-bottom: 30px;
             display: flex;
             justify-content: center;
-            font-size: 32px;
+            font-size: 28px;
         }
 
         .content_box_con {
-            font-size: 20px;
+            margin-bottom: 88px;
             padding: 0 20px;
+            font-size: 16px;
+            font-family: PingFangSC-Regular, PingFang SC;
+            font-weight: 400;
+            color: #000000;
+            line-height: 32px;
         }
 
         .content_body {
             margin: 40px 0 100px 0 !important;
             justify-content: center !important;
+        }
+
+        .home_img {
+            width: 220px;
+            height: 220px;
+        }
+
+        .home_banner {
+            background: url(./images/banner.png) 100% no-repeat;
+            height: 400px;
+            background-size: 100% 100%;
         }
     </style>
 </head>
@@ -70,34 +90,33 @@
         </div>
     </div>
     <div class="content">
-        <div>
-            <img src="images/banner.png" style="width: 100%"/>
+        <div class="home_banner">
         </div>
         <div class="content_body">
             <div class="content_box">
                 <div class="content_img">
-                    <img src="images/cloud.png"/>
+                    <img src="images/cloud.png" class="home_img"/>
                 </div>
                 <p class="content_box_title">跨云服务</p>
                 <p class="content_box_con">使用S3存储协议实现跨云存储</p>
             </div>
             <div class="content_box">
                 <div class="content_img">
-                    <img src="images/cache.png"/>
+                    <img src="images/cache.png" class="home_img"/>
                 </div>
                 <p class="content_box_title">高性能缓存</p>
-                <p class="content_box_con">使用内存对热点数据实现高速缓存</p>
+                <p class="content_box_con">使用内存对热点数据高速缓存</p>
             </div>
             <div class="content_box">
                 <div class="content_img">
-                    <img src="images/network.png"/>
+                    <img src="images/network.png" class="home_img"/>
                 </div>
                 <p class="content_box_title">高速网络</p>
                 <p class="content_box_con">使用RMDA增加网络吞吐降低网络延迟</p>
             </div>
             <div class="content_box">
                 <div class="content_img">
-                    <img src="images/store.png"/>
+                    <img src="images/store.png" class="home_img"/>
                 </div>
                 <p class="content_box_title">分布式存储</p>
                 <p class="content_box_con">使用EPaxos协议保证跨节点数据一致性</p>
