--- a/join.html
+++ b/join.html
@@ -37,11 +37,11 @@
         }
 
         .recruit_title {
-            margin-bottom: 32px;
+            margin-bottom: 41px;
         }
 
         .recruit_title h3 {
-            font-size: 40px;
+            font-size: 32px;
             font-family: Helvetica;
             color: #000000;;
         }
@@ -64,11 +64,23 @@
         }
 
         .recruit_Con h4 {
+            line-height: 24px;
+            font-size: 14px;
             font-weight: bold;
         }
 
         .con_top {
-            margin-top: 40px;
+            margin-top: 30px;
+        }
+
+        .home_banner {
+            background: url(./images/banner.png) 100% no-repeat;
+            height: 400px;
+            background-size: 100% 100%;
+        }
+
+        .content_body:last-child {
+            margin-bottom: 100px !important;
         }
 
     </style>
@@ -85,7 +97,7 @@
                 <div class="div_hover">
                     <p onclick="window.location.href='docs.html'">DOCS</p>
                 </div>
-                <div class="div_hover">
+                <div class="active">
                     <p onclick="window.location.href='join.html'">JOIN US</p>
                 </div>
                 <div>
@@ -96,8 +108,7 @@
         </div>
     </div>
     <div class="content">
-        <div>
-            <img src="images/banner.png" style="width: 100%"/>
+        <div class="home_banner">
         </div>
         <div class="content_body">
             <div class="content_recruit">
@@ -136,7 +147,7 @@
                         </div>
                     </div>
                     <div class="recruit_Con_img">
-                        <img src="images/join.png">
+                        <img src="images/join1.png">
                     </div>
                 </div>
             </div>
@@ -177,7 +188,7 @@
                         </div>
                     </div>
                     <div class="recruit_Con_img">
-                        <img src="images/join.png">
+                        <img src="images/join2.png">
                     </div>
                 </div>
             </div>
