增加IE小于11的tip弹框

--- a/home.html
+++ b/home.html
@@ -138,5 +138,35 @@
         </div>
     </div>
 </div>
+<div class="model_back" id="tipModel">
+    <div class="model">
+        <div style="width: auto; text-align: center;">
+            <img src="images/datenLord_logo.png" style="margin-top: 30px;width: 100px;height: 100px">
+            <h3 style="color: #000000;margin-bottom: 20px;;font-size: 24px;font-weight: bold">请升级浏览器版本</h3>
+            <p>您正在使用旧版本浏览器。请升级浏览器以获得更好的体验。</p>
+            <div style="display: inline-block; text-align: center;">
+                <div style="display: inline-block;margin: 20px 0 10px 0">
+                    <img src="images/chrome.png" style="width: 100px; height: 100px; margin: 10px;">
+                    <p>Chrome</p>
+                </div>
+                <div style="display: inline-block;margin: 20px 0 10px 0">
+                    <img src="images/firefox.png" style="width: 100px; height: 100px; margin: 10px;">
+                    <p>Firefox</p>
+                </div>
+                <div style="display: inline-block;margin: 20px 0 10px 0">
+                    <img src="images/safari.png" style="width: 100px; height: 100px; margin: 10px;">
+                    <p>Safari</p>
+                </div>
+                <div style="display: inline-block;margin: 20px 0 10px 0">
+                    <img src="images/edge.png" style="width: 100px; height: 100px; margin: 10px;">
+                    <p>Edge</p>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</div>
+<script type="text/javascript" src="./js/main.js"></script>
+<script>isIE();</script>
 </body>
 </html>
